samples/_failures_safe/1761309402_02b0e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ea431a7.c: In function ‘main’:
./samples/SAFE/__tmp_2ea431a7.c:192:5: error: expected declaration or statement at end of input
  192 |     }
      |     ^
